<resources>
    <string name="app_name">The Bubble</string>
    <string name="welcome">Welcome to The Bubble!</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="without_login_button">Continue as Guest</string>
    <string name="please_login">Login to your account</string>
    <string name="register">Register your details</string>
    <string name="email_hint">Enter your email ID here...</string>
    <string name="password_hint">Enter your password here...</string>
    <string name="forgot_password">Forgot your password? Click here.</string>
    <string name="new_user_login">Don\'t have an account? <b>Sign up here!</b></string>
    <string name="register_name">Enter your full name...</string>
    <string name="confirm_password">Confirm your password...</string>
    <string name="admin_head">Administrator Dashboard</string>
    <string name="example_email">johndoe@email.com</string>
    <string name="userDashboard_head">User Dashboard</string>
    <string name="cat_add">Add a book category</string>
    <string name="cat_title_hint">Add your category title here</string>
    <string name="add">Add now</string>
    <string name="cat_placeholder">Category goes here</string>
    <string name="cat_search_hint">Search for your category</string>
    <string name="add_pdf_admin">Add your book here</string>
    <string name="pdf_title_hint_admin">Title of the book</string>
    <string name="pdf_desc_hint_admin">Description of the book</string>
    <string name="pdf_category_hint_admin">Your book\'s category</string>
    <string name="book_title_placeholder">Title of the book</string>
    <string name="book_desc_placeholder">Description of the book</string>
    <string name="book_cat_placeholder">Category of the book</string>
    <string name="book_size_placeholder">5MB</string>
    <string name="book_date_placeholder">DD/MM/YYYY</string>
    <string name="book_title_head">Books</string>
    <string name="book_search_hint">Search for your book</string>
    <string name="book_edit_head">Edit your book here</string>
    <string name="edit">Edit Now</string>
    <string name="book_details_head">Your book\'s details</string>
    <string name="not_available">N/A</string>
    <string name="date">Date Uploaded</string>
    <string name="book_size">Book Size</string>
    <string name="views">Views</string>
    <string name="download_count">Download Count</string>
    <string name="open_book">Open</string>
    <string name="read_book">Read Book</string>
    <string name="download">Download</string>
    <string name="pages">Pages</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fav">Add Favourite</string>
    <string name="fav_remove">Remove Favourite</string>
</resources>