<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bubble_icon"
        android:src="@drawable/bookicon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bubble_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="24sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/lgnBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/withoutLgnBtn"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_login_button"
        android:text="@string/login_button"
        android:textColor="@color/background_white" />

    <Button
        android:id="@+id/withoutLgnBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/without_login_button"
        android:textColor="@color/standard_bubble_color"
        android:background="@drawable/shape_withoutlogin_button"/>

</RelativeLayout>