<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="5dp"
    app:cardBackgroundColor="@color/background_white"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    app:contentPadding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/standard_bubble_color">

        <RelativeLayout
            android:id="@+id/pdfRelativeLayout"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_marginEnd="5dp">
            
            <com.github.barteksc.pdfviewer.PDFView
                android:id="@+id/viewPdf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ProgressBar
                android:id="@+id/progBarPdf"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

        <TextView
            android:id="@+id/bookTitleText"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/pdfRelativeLayout"
            android:maxLines="1"
            android:text="@string/book_title_placeholder"
            android:textColor="@color/background_white" />

        <TextView
            android:id="@+id/bookDescText"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bookTitleText"
            android:layout_toEndOf="@+id/pdfRelativeLayout"
            android:ellipsize="end"
            android:layout_marginTop="8dp"
            android:maxLines="4"
            android:text="@string/book_desc_placeholder"
            android:textColor="@color/background_white" />

        <TextView
            android:id="@+id/bookCatText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:text="@string/book_cat_placeholder"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:textColor="@color/background_white"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/bookSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:text="@string/book_size_placeholder"
            android:layout_toEndOf="@+id/pdfRelativeLayout"
            android:layout_alignParentBottom="true"
            android:textColor="@color/background_white"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/bookDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:text="@string/book_date_placeholder"
            android:layout_toEndOf="@+id/bookSize"
            android:textAlignment="center"
            android:layout_toStartOf="@+id/bookCatText"
            android:layout_alignParentBottom="true"
            android:textColor="@color/background_white"
            android:maxLines="1"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>