<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    tools:context=".pages.LoginPage">

    <ImageView
        android:id="@+id/bookIcon"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/bookicon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/please_login"
        android:textColor="@color/standard_bubble_color"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="25sp" />
    
    <RelativeLayout
        android:id="@+id/highlight_bar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_highlight_bar">

        <TextView
            android:id="@+id/newUserRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="30dp"
            android:text="@string/new_user_login"
            android:textColor="@color/background_white"
            android:textSize="16sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="30dp"
        android:layout_above="@+id/highlight_bar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/emailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_text_field"
                    android:drawableStart="@drawable/ic_baseline_email_transparent"
                    android:drawablePadding="10dp"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/standard_bubble_color"
                    android:textColorHint="@color/transparent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailInputLayout"
                android:layout_marginTop="5dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/passwordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_text_field"
                    android:drawableStart="@drawable/ic_baseline_lock_open_transparent"
                    android:drawablePadding="10dp"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/standard_bubble_color"
                    android:textColorHint="@color/transparent" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordInputLayout"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/forgot_password"
                android:textColor="@color/gray_custom" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/lgnBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgotPassword"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="80dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/shape_login_button"
                android:text="@string/login_button"
                android:textColor="@color/background_white" />


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>