<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    tools:context=".pages.BookDetailPage">

    <RelativeLayout
        android:id="@+id/bookDetailsHighlightBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_highlight_bar_2">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_white"
            android:background="@android:color/transparent"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/bookDetailsHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/book_details_head"
            android:textColor="@color/background_white"
            android:textSize="24sp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/bookDetailsHighlightBar"
        android:layout_above="@+id/pdfOptionsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/standard_bubble_color">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/pdfRelativeLayout"
                    android:layout_width="100dp"
                    android:layout_height="140dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/gray_custom2">

                    <com.github.barteksc.pdfviewer.PDFView
                        android:id="@+id/viewPdf"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                    <ProgressBar
                        android:id="@+id/progBarPdf"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/titleText"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/pdfRelativeLayout"
                    android:text="@string/book_title_placeholder"
                    android:textColor="@color/background_white" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/titleText"
                    android:layout_toEndOf="@id/pdfRelativeLayout">

                    <TableRow>

                        <TextView
                            android:id="@+id/catLabelTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_marginEnd="5dp"
                            android:text="@string/book_cat_placeholder"
                            android:textColor="@color/background_white"/>

                        <TextView
                            android:id="@+id/catTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:text="@string/not_available"
                            android:textColor="@color/background_white"/>

                    </TableRow>

                    <TableRow
                        android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/dateLabelTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_marginEnd="5dp"
                            android:text="@string/date"
                            android:textColor="@color/background_white"/>

                        <TextView
                            android:id="@+id/dateTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:text="@string/not_available"
                            android:textColor="@color/background_white"/>

                    </TableRow>

                    <TableRow
                        android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/sizeLabelTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_marginEnd="5dp"
                            android:text="@string/book_size"
                            android:textColor="@color/background_white"/>

                        <TextView
                            android:id="@+id/sizeTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:text="@string/not_available"
                            android:textColor="@color/background_white"/>

                    </TableRow>

                    <TableRow
                        android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/viewLabelTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_marginEnd="5dp"
                            android:text="@string/views"
                            android:textColor="@color/background_white"/>

                        <TextView
                            android:id="@+id/viewTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:text="@string/not_available"
                            android:textColor="@color/background_white"/>

                    </TableRow>

                    <TableRow
                        android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/downloadCountLabelTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_marginEnd="5dp"
                            android:text="@string/download_count"
                            android:textColor="@color/background_white"/>

                        <TextView
                            android:id="@+id/downloadCountTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:text="@string/not_available"
                            android:textColor="@color/background_white"/>

                    </TableRow>

                </TableLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/bookDetailedDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_desc_placeholder"
                android:textColor="@color/background_white"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/pdfOptionsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bookOpenButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_baseline_open_in_full_white"
            android:text="@string/open_book"
            android:textColor="@color/background_white"
            android:background="@color/standard_bubble_color"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bookDownloadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_baseline_file_download_white"
            android:text="@string/download"
            android:textColor="@color/background_white"
            android:background="@color/standard_bubble_color"/>

    </LinearLayout>

</RelativeLayout>