<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    tools:context=".AddBookCategory">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_purple"
        android:background="@android:color/transparent"
        android:padding="5dp"
        android:layout_margin="10dp"/>

    <ImageView
        android:id="@+id/bookIcon"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/bookicon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/cat_add"
        android:textColor="@color/standard_bubble_color"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="25sp" />

    <RelativeLayout
        android:id="@+id/highlight_bar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_highlight_bar"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/catInputLayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="225dp">

        <EditText
            android:id="@+id/catText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_text_field"
            android:drawableStart="@drawable/ic_baseline_category_transparent"
            android:drawablePadding="10dp"
            android:hint="@string/cat_title_hint"
            android:textColor="@color/standard_bubble_color"
            android:inputType="textPersonName|textCapWords"
            android:padding="10dp"
            android:textColorHint="@color/gray_custom"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addCatBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_login_button"
        android:text="@string/add"
        android:textColor="@color/background_white"
        android:layout_below="@id/catInputLayer"/>

</RelativeLayout>